--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 *.html      text eol=lf
 *.jsx       text eol=lf
 *.json      text eol=lf
+*.css       text eol=lf
 *.scss      text eol=lf
 *.svg       text eol=lf
 *.sh        text eol=lf
