--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   },
   "scripts": {
+    "doc": "typedoc",
     "build": "tsup src/index.ts --sourcemap --format cjs,esm --dts --clean",
     "prepublishOnly": "npm run build",
     "lint": "eslint src",
@@ -50,6 +51,7 @@
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
+    "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   }
 }
