--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
 		"strictNullChecks": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": false,
-		"noUncheckedIndexedAccess": true
+		"noUncheckedIndexedAccess": true,
+		"skipLibCheck": true
 	},
 	"typedocOptions": {
 		"entryPoints": ["src/index.ts"],
