--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@types/chai": "^4.3.14",
+    "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "chai": "^5.1.0",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "chai": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -54,6 +54,7 @@
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
+    "type-testing": "^0.2.0",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   }
