--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@types/chai": "^4.3.16",
+    "@stylistic/eslint-plugin": "^2.4.0",
+    "@types/chai": "^4.3.17",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.13",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -47,7 +48,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-sonarjs": "^0.25.1",
     "mocha": "^10.7.0",
