--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "type-testing": "^0.2.0",
     "typedoc": "^0.26.5",
     "typescript": "^5.5.4"
-  }
+  },
+  "packageManager": "pnpm@9.6.0+sha256.dae0f7e822c56b20979bb5965e3b73b8bdabb6b8b8ef121da6d857508599ca35"
 }
