--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,9 @@ jobs:
         if: env.HAVE_VALIDATE_SCRIPT == 'true'
         run: ${{ env.NPM }} run validate
 
-      #- name: Run unit tests
-        #if: env.HAVE_UNIT_TEST_SCRIPT == 'true'
-        #run: ${{ env.NPM }} test
+      - name: Run unit tests
+        if: env.HAVE_UNIT_TEST_SCRIPT == 'true'
+        run: ${{ env.NPM }} test
 
       - name: Run linter checks
         if: env.HAVE_LINT_SCRIPT == 'true'
