--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "@luolapeikko/ts-common",
   "version": "0.1.3",
   "description": "Typescript common utils and types",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -20,7 +21,25 @@
     "build": "tsup src/index.ts --sourcemap --format cjs,esm --dts --clean",
     "prepublishOnly": "pnpm run build",
     "lint": "eslint src",
-    "test": "mocha"
+    "test": "mocha",
+    "validate": "tsc --noEmit --project tsconfig.test.json"
+  },
+  "mocha": {
+    "exit": true,
+    "extension": [
+      "ts",
+      "js"
+    ],
+    "recursive": true,
+    "enable-source-maps": true,
+    "require": [
+      "ts-node/register"
+    ],
+    "loader": "ts-node/esm",
+    "reporters": [
+      "spec",
+      "mocha-junit-reporter"
+    ]
   },
   "repository": {
     "type": "git",
@@ -39,12 +58,12 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.4.0",
+    "@stylistic/eslint-plugin": "^2.6.2",
     "@types/chai": "^4.3.17",
     "@types/mocha": "^10.0.7",
-    "@types/node": "^20.14.13",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@types/node": "^20.14.15",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "chai": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -52,10 +71,10 @@
     "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-sonarjs": "^0.25.1",
-    "mocha": "^10.7.0",
+    "mocha": "^10.7.3",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "tsup": "^8.2.3",
+    "tsup": "^8.2.4",
     "type-testing": "^0.2.0",
     "typedoc": "^0.26.5",
     "typescript": "^5.5.4"
