--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "doc": "typedoc",
     "build": "tsup src/index.ts --sourcemap --format cjs,esm --dts --clean",
     "prepublishOnly": "pnpm run build",
-    "lint": "eslint src",
+    "lint": "eslint . --ext .ts",
     "test": "mocha",
     "validate": "tsc --noEmit --project tsconfig.test.json"
   },
@@ -58,12 +58,13 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.6.2",
-    "@types/chai": "^4.3.17",
+    "@stylistic/eslint-plugin": "^2.8.0",
+    "@stylistic/eslint-plugin-ts": "^2.8.0",
+    "@types/chai": "^4.3.19",
     "@types/mocha": "^10.0.7",
-    "@types/node": "^20.14.15",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
+    "@types/node": "^20.16.5",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "chai": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -74,10 +75,11 @@
     "mocha": "^10.7.3",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
+    "tslib": "^2.7.0",
     "tsup": "^8.2.4",
     "type-testing": "^0.2.0",
-    "typedoc": "^0.26.5",
-    "typescript": "^5.5.4"
+    "typedoc": "^0.26.7",
+    "typescript": "^5.6.2"
   },
-  "packageManager": "pnpm@9.6.0+sha256.dae0f7e822c56b20979bb5965e3b73b8bdabb6b8b8ef121da6d857508599ca35"
+  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
