change default as CJS

--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "@luolapeikko/ts-common",
   "version": "0.2.2",
   "description": "Typescript common utils and types",
-  "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
     }
   },
   "files": [
