--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,9 @@ permissions:
   pages: write
   id-token: write
 
+env:
+    NPM: 'pnpm'
+
 jobs:
   # Single deploy job since we're just deploying
   deploy:
@@ -30,7 +33,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+      - uses: pnpm/action-setup@v4
+        if: env.NPM == 'pnpm'
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
