--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "dist"
   ],
   "scripts": {
-    "doc": "typedoc",
     "build": "tsup src/index.mts --sourcemap --format cjs,esm --dts --clean",
     "prepublishOnly": "pnpm run build",
     "lint": "eslint . --ext .mts",
-    "test": "mocha",
+    "test": "vitest test --run --no-isolate --coverage",
+    "coverage": "vitest test --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
     "validate": "tsc --noEmit --project tsconfig.test.json"
   },
   "mocha": {
@@ -57,28 +57,26 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.8.0",
-    "@stylistic/eslint-plugin-ts": "^2.8.0",
-    "@types/chai": "^5.0.0",
-    "@types/mocha": "^10.0.8",
-    "@types/node": "^20.16.10",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
-    "chai": "^5.1.1",
+    "@stylistic/eslint-plugin": "^2.12.0",
+    "@stylistic/eslint-plugin-ts": "^2.12.0",
+    "@types/node": "^20.17.9",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "c8": "^10.1.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-sonarjs": "^0.25.1",
-    "mocha": "^10.7.3",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.7.0",
-    "tsup": "^8.3.0",
+    "prettier": "^3.4.2",
+    "tslib": "^2.8.1",
+    "tsup": "^8.3.5",
     "type-testing": "^0.2.0",
-    "typedoc": "^0.26.7",
-    "typescript": "^5.6.2"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
