--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   PACKAGE_NAME: 'unknown'
   PACKAGE_VERSION: 'unknown'
-  NPM: 'pnpm'
+  NPM: 'npm'
   NPM_VERSION: 'unknown'
   HAVE_COVERAGE_SCRIPT: false
   HAVE_VALIDATE_SCRIPT: false
@@ -23,21 +23,24 @@ jobs:
     steps:
       - uses: dcarbone/install-jq-action@v2
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        if: env.NPM == 'pnpm'
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
 
-      - name: Read package information
+      - name: Identify project environment variables
         run: |
+          [ -f pnpm-lock.yaml ] && echo "NPM=pnpm" >> $GITHUB_ENV
           echo "PACKAGE_NAME=$(cat package.json | jq -r .name)" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
           echo "HAVE_COVERAGE_SCRIPT=$(jq 'if .scripts.coverage == null then false else true end' package.json)" >> $GITHUB_ENV
           echo "HAVE_VALIDATE_SCRIPT=$(jq 'if .scripts.validate == null then false else true end' package.json)" >> $GITHUB_ENV
           echo "HAVE_LINT_SCRIPT=$(jq 'if .scripts.lint == null then false else true end' package.json)" >> $GITHUB_ENV
           echo "HAVE_UNIT_TEST_SCRIPT=$(jq 'if .scripts.test == null then false else true end' package.json)" >> $GITHUB_ENV
+
+      - uses: pnpm/action-setup@v4
+        if: env.NPM == 'pnpm'
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Get current npmjs version for ${{env.PACKAGE_NAME}}
         run: |
