--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,13 @@ jobs:
 
       - name: Identify project environment variables
         run: |
-          [ -f pnpm-lock.yaml ] && echo "NPM=pnpm" >> $GITHUB_ENV
-          echo "PACKAGE_NAME=$(cat package.json | jq -r .name)" >> $GITHUB_ENV
-          echo "PACKAGE_VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
-          echo "HAVE_COVERAGE_SCRIPT=$(jq 'if .scripts.coverage == null then false else true end' package.json)" >> $GITHUB_ENV
-          echo "HAVE_VALIDATE_SCRIPT=$(jq 'if .scripts.validate == null then false else true end' package.json)" >> $GITHUB_ENV
-          echo "HAVE_LINT_SCRIPT=$(jq 'if .scripts.lint == null then false else true end' package.json)" >> $GITHUB_ENV
-          echo "HAVE_UNIT_TEST_SCRIPT=$(jq 'if .scripts.test == null then false else true end' package.json)" >> $GITHUB_ENV
+          [ -f pnpm-lock.yaml ] && echo "NPM=pnpm" | tee -a $GITHUB_ENV
+          echo "PACKAGE_NAME=$(cat package.json | jq -r .name)" | tee -a $GITHUB_ENV
+          echo "PACKAGE_VERSION=$(cat package.json | jq -r .version)" | tee -a $GITHUB_ENV
+          echo "HAVE_COVERAGE_SCRIPT=$(jq 'if .scripts.coverage == null then false else true end' package.json)" | tee -a $GITHUB_ENV
+          echo "HAVE_VALIDATE_SCRIPT=$(jq 'if .scripts.validate == null then false else true end' package.json)" | tee -a $GITHUB_ENV
+          echo "HAVE_LINT_SCRIPT=$(jq 'if .scripts.lint == null then false else true end' package.json)" | tee -a $GITHUB_ENV
+          echo "HAVE_UNIT_TEST_SCRIPT=$(jq 'if .scripts.test == null then false else true end' package.json)"| tee -a $GITHUB_ENV
 
       - uses: pnpm/action-setup@v4
         if: env.NPM == 'pnpm'
