--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
     branches: [main]
 env:
   # Setting an environment variable with the value of a configuration variable
+  PUBLISH_BRANCH: 'refs/heads/main'
   CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   PACKAGE_NAME: 'unknown'
@@ -39,7 +40,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: 'lts/*'
           registry-url: 'https://registry.npmjs.org'
 
       - name: Get current npmjs version for ${{env.PACKAGE_NAME}}
@@ -63,7 +64,7 @@ jobs:
 
       - name: Run and publish code coverage
         if: |
-          github.ref == 'refs/heads/main' &&
+          github.ref == env.PUBLISH_BRANCH &&
           env.CC_TEST_REPORTER_ID != '' &&
           env.HAVE_COVERAGE_SCRIPT == 'true'
         uses: paambaati/codeclimate-action@v5.0.0
@@ -76,7 +77,7 @@ jobs:
       - name: Publish ${{env.PACKAGE_NAME}} ${{env.PACKAGE_VERSION}}
         run: ${{ env.NPM }} publish --no-git-checks --access public
         if: |
-          github.ref == 'refs/heads/main' &&
+          github.ref == env.PUBLISH_BRANCH &&
           env.NPM_TOKEN != '' &&
           env.PACKAGE_VERSION != env.NPM_VERSION
         env:
