--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "build": "tsup src/index.mts --sourcemap --format cjs,esm --dts --clean",
     "prepublishOnly": "pnpm run build",
     "lint": "eslint . --ext .mts",
-    "test": "vitest test --run --no-isolate --coverage",
-    "coverage": "vitest test --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
+    "test": "vitest test --typecheck --run --no-isolate --coverage",
+    "coverage": "vitest test --typecheck --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
     "validate": "tsc --noEmit --project tsconfig.test.json"
   },
   "mocha": {
@@ -57,13 +57,13 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.12.0",
-    "@stylistic/eslint-plugin-ts": "^2.12.0",
-    "@types/node": "^20.17.9",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
+    "@stylistic/eslint-plugin": "^2.12.1",
+    "@stylistic/eslint-plugin-ts": "^2.12.1",
+    "@types/node": "^22.10.5",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "@vitest/coverage-v8": "^2.1.8",
-    "c8": "^10.1.2",
+    "c8": "^10.1.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -74,8 +74,8 @@
     "tslib": "^2.8.1",
     "tsup": "^8.3.5",
     "type-testing": "^0.2.0",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.3",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7",
     "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
