--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
 		"plugin:sonarjs/recommended"
 	],
 	"rules": {
+		"sort-imports": "off",
 		"import/order": [
 			"error",
 			{
@@ -25,6 +26,7 @@
 					"order": "asc",
 					"caseInsensitive": true
 				},
+				"named": true,
 				"newlines-between": "never"
 			}
 		],
@@ -67,7 +69,26 @@
 			}
 		],
 		"@typescript-eslint/consistent-type-imports": ["warn", {"prefer": "type-imports", "fixStyle": "inline-type-imports"}],
+		"@typescript-eslint/member-ordering": [
+			"warn",
+			{
+				"classes": ["static-field", "static-method", "field", "constructor", "public-method", "protected-method", "private-method", "#private-method"]
+			}
+		],
 		"@typescript-eslint/no-unnecessary-condition": "off",
-        "import/no-unresolved": "off"
-	}
+		"import/no-unresolved": "off"
+	},
+	"overrides": [
+		{
+			"files": ["**/*.test.mts", "**/*.test-d.mts"],
+			"rules": {
+				"no-console": "off",
+				"sonarjs/no-duplicate-string": "off",
+				"@typescript-eslint/no-unsafe-argument": "off",
+				"@typescript-eslint/no-unsafe-assignment": "off",
+				"@typescript-eslint/no-explicit-any": "off",
+				"@typescript-eslint/no-confusing-void-expression": "off"
+			}
+		}
+	]
 }
