includeKeys and excludeKeys functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
 		"out": "docs"
 	},
 	"include": ["src/"],
-	"exclude": ["test/", "dist/", "node_modules/","*.test.mts"],
+	"exclude": ["test/", "dist/", "node_modules/", "*.test.mts", "*.test-d.mts"],
 	"ts-node": {
 		"esm": true
 	}
