--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,7 @@
 			{
 				"caseSensitive": false,
 				"natural": true,
-				"minKeys": 4
+				"minKeys": 5
 			}
 		],
 		"no-unused-vars": "off",
@@ -83,11 +83,13 @@
 			"files": ["**/*.test.mts", "**/*.test-d.mts"],
 			"rules": {
 				"no-console": "off",
+				"no-proto": "off",
 				"sonarjs/no-duplicate-string": "off",
 				"@typescript-eslint/no-unsafe-argument": "off",
 				"@typescript-eslint/no-unsafe-assignment": "off",
 				"@typescript-eslint/no-explicit-any": "off",
-				"@typescript-eslint/no-confusing-void-expression": "off"
+				"@typescript-eslint/no-confusing-void-expression": "off",
+				"@typescript-eslint/no-unsafe-member-access": "off"
 			}
 		}
 	]
