--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -51,19 +51,18 @@ jobs:
       - name: TSDoc Action
         uses: erikyo/tsdoc-action@v1
         with:
-          source_dir: ./src/*
+          source_dir: ./src/
           output_dir: ./docs
           front_page: README.md
-
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: './docs'
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
