new error utils and eslint upgrade

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,5 @@
 		"out": "docs"
 	},
 	"include": ["src/"],
-	"exclude": ["test/", "dist/", "node_modules/", "*.test.mts", "*.test-d.mts"],
-	"ts-node": {
-		"esm": true
-	}
+	"exclude": ["test/", "dist/", "node_modules/", "*.test.mts", "*.test-d.mts"]
 }
