--- a/package.json
+++ b/package.json
@@ -23,23 +23,6 @@
     "coverage": "vitest test --typecheck --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
     "validate": "tsc --noEmit --project tsconfig.test.json"
   },
-  "mocha": {
-    "exit": true,
-    "extension": [
-      "mts",
-      "js"
-    ],
-    "recursive": true,
-    "enable-source-maps": true,
-    "require": [
-      "ts-node/register"
-    ],
-    "loader": "ts-node/esm",
-    "reporters": [
-      "spec",
-      "mocha-junit-reporter"
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/luolapeikko/ts-common.git"
@@ -57,26 +40,33 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^3.1.0",
-    "@stylistic/eslint-plugin-ts": "^3.1.0",
-    "@types/node": "^22.13.4",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.21.0",
+    "@stylistic/eslint-plugin": "^4.1.0",
+    "@stylistic/eslint-plugin-ts": "^4.1.0",
+    "@types/node": "^22.13.8",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "@vitest/coverage-v8": "^3.0.7",
     "c8": "^10.1.3",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-import-resolver-typescript": "^3.8.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-sonarjs": "^0.25.1",
-    "prettier": "^3.5.1",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "prettier": "^3.5.2",
     "tslib": "^2.8.1",
-    "tsup": "^8.3.6",
+    "tsup": "^8.4.0",
     "typescript": "^5.7.3",
-    "vite": "^6.1.0",
-    "vitest": "^3.0.5"
+    "vite": "^6.2.0",
+    "vitest": "^3.0.7"
   },
-  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
+  }
 }
