--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-config-prettier": "^10.0.2",
     "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.8",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-sonarjs": "^3.0.2",
     "prettier": "^3.5.3",
