--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -51,9 +51,11 @@ jobs:
       - name: TSDoc Action
         uses: erikyo/tsdoc-action@v1
         with:
-          source_dir: ./src/*
+          source_dir: ./src
           output_dir: ./docs
+          options: ./typedoc.json
           front_page: README.md
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
