--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.mts --sourcemap --format cjs,esm --dts --clean",
+    "build": "tsdown src/index.mts --sourcemap --format cjs,esm --dts --clean",
     "prepublishOnly": "pnpm run build",
-    "lint": "eslint . --ext .mts",
+    "lint": "oxlint",
     "test": "vitest test --typecheck --run --no-isolate --coverage",
     "coverage": "vitest test --typecheck --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
-    "validate": "tsc --noEmit --project tsconfig.test.json"
+    "validate": "tsgo --noEmit --project tsconfig.test.json"
   },
   "repository": {
     "type": "git",
@@ -40,27 +40,15 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@cspell/eslint-plugin": "^9.0.2",
-    "@eslint/js": "^9.28.0",
-    "@stylistic/eslint-plugin": "^4.4.1",
     "@types/node": "^22.15.31",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
+    "@typescript/native-preview": "7.0.0-dev.20250616.1",
     "@vitest/coverage-v8": "^3.2.3",
     "c8": "^10.1.3",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.4.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsdoc": "^51.0.1",
-    "eslint-plugin-perfectionist": "^4.14.0",
-    "eslint-plugin-prettier": "^5.4.1",
-    "eslint-plugin-sonarjs": "^3.0.2",
+    "oxlint": "^1.1.0",
     "prettier": "^3.5.3",
+    "tsdown": "^0.12.8",
     "tslib": "^2.8.1",
-    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
     "vitest": "^3.2.3"
   },
