--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "tsdown src/index.mts --sourcemap --format cjs,esm --dts --clean",
     "prepublishOnly": "pnpm run build",
-    "lint": "oxlint",
+    "lint": "oxlint && eslint . --cache --ext .ts",
     "test": "vitest test --typecheck --run --no-isolate --coverage",
     "coverage": "vitest test --typecheck --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
     "validate": "tsgo --noEmit --project tsconfig.test.json"
@@ -40,16 +40,27 @@
   },
   "homepage": "https://github.com/luolapeikko/ts-common#readme",
   "devDependencies": {
-    "@types/node": "^22.16.0",
-    "@typescript/native-preview": "7.0.0-dev.20250705.1",
+    "@eslint/js": "^9.31.0",
+    "@stylistic/eslint-plugin": "^5.2.2",
+    "@types/node": "^22.16.5",
+    "@typescript/native-preview": "7.0.0-dev.20250726.1",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "@vitest/coverage-v8": "^3.2.4",
     "c8": "^10.1.3",
-    "oxlint": "^1.6.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-sonarjs": "^3.0.4",
+    "oxlint": "^1.8.0",
     "prettier": "^3.6.2",
-    "tsdown": "^0.12.9",
+    "tsdown": "^0.13.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^7.0.2",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6",
     "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
