--- a/package.json
+++ b/package.json
@@ -1,73 +1,76 @@
 {
-  "name": "@luolapeikko/ts-common",
-  "version": "1.0.5",
-  "description": "Typescript common utils and types",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "tsdown src/index.mts --sourcemap --format cjs,esm --dts --clean",
-    "prepublishOnly": "pnpm run build",
-    "lint": "oxlint && eslint . --cache --ext .ts",
-    "test": "vitest test --typecheck --run --no-isolate --coverage",
-    "coverage": "vitest test --typecheck --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
-    "validate": "tsgo --noEmit --project tsconfig.test.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/luolapeikko/ts-common.git"
-  },
-  "keywords": [
-    "typescript",
-    "common",
-    "interface",
-    "type"
-  ],
-  "author": "mharj",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/luolapeikko/ts-common/issues"
-  },
-  "homepage": "https://github.com/luolapeikko/ts-common#readme",
-  "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@stylistic/eslint-plugin": "^5.2.2",
-    "@types/node": "^22.16.5",
-    "@typescript/native-preview": "7.0.0-dev.20250801.1",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "c8": "^10.1.3",
-    "eslint": "^9.31.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.3",
-    "eslint-plugin-sonarjs": "^3.0.4",
-    "oxlint": "^1.9.0",
-    "prettier": "^3.6.2",
-    "tsdown": "^0.13.1",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.6",
-    "vitest": "^3.2.4"
-  },
-  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild",
-      "unrs-resolver"
-    ]
-  }
+	"name": "@luolapeikko/ts-common",
+	"version": "1.0.5",
+	"description": "Typescript common utils and types",
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs"
+		}
+	},
+	"files": [
+		"dist"
+	],
+	"scripts": {
+		"build": "tsdown src/index.mts --sourcemap --format cjs,esm --dts --clean",
+		"prepublishOnly": "pnpm run build",
+		"lint": "oxlint && eslint . --cache --ext .ts",
+		"test": "vitest test --typecheck --run --no-isolate --coverage",
+		"coverage": "vitest test --typecheck --run --no-isolate --reporter=dot --coverage --coverage.reporter=lcov",
+		"validate": "tsgo --noEmit --project tsconfig.test.json"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/luolapeikko/ts-common.git"
+	},
+	"keywords": [
+		"typescript",
+		"common",
+		"interface",
+		"type"
+	],
+	"author": "mharj",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/luolapeikko/ts-common/issues"
+	},
+	"homepage": "https://github.com/luolapeikko/ts-common#readme",
+	"engines": {
+		"node": ">=18.0.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.34.0",
+		"@stylistic/eslint-plugin": "^5.3.1",
+		"@types/node": "^22.18.0",
+		"@typescript-eslint/eslint-plugin": "^8.41.0",
+		"@typescript-eslint/parser": "^8.41.0",
+		"@typescript/native-preview": "7.0.0-dev.20250901.1",
+		"@vitest/coverage-v8": "^3.2.4",
+		"c8": "^10.1.3",
+		"eslint": "^9.34.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-import-resolver-typescript": "^4.4.4",
+		"eslint-plugin-import": "^2.32.0",
+		"eslint-plugin-prettier": "^5.5.4",
+		"eslint-plugin-sonarjs": "^3.0.5",
+		"oxlint": "^1.14.0",
+		"prettier": "^3.6.2",
+		"tsdown": "^0.14.2",
+		"tslib": "^2.8.1",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.41.0",
+		"vite": "^7.1.4",
+		"vitest": "^3.2.4"
+	},
+	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild",
+			"unrs-resolver"
+		]
+	}
 }
