--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
 		"module": "NodeNext",
-		"lib": ["es6"],
-		"target": "es2020",
+		"lib": ["ES2022"],
+		"target": "ES2022",
 		"rootDir": "./src",
 		"outDir": "./dist",
 		"moduleResolution": "NodeNext",
